# Gamefi-2048

./: .gitignore  App.tsx  README.md  README_CN.md  constants.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  build_android.bat  config.gradle  gradle.properties  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/game2048/: GameEngine.java  GameEngineModule.java  GameEnginePackage.java  MainActivity.java  MainApplication.java
components/: AdminMintModal.tsx  ListNFTModal.tsx  MintModal.tsx  board.tsx  marketplace-card.tsx  marketplace.tsx  mobile-swiper.tsx  nft-card.tsx  profile.tsx  sidebar.tsx  splash.tsx
context/: game-context.tsx
contracts/: GameNFT.sol  GameToken.sol  Marketplace.sol  config.ts
contracts-abi/: config.ts
contracts-abi/abis/: GameNFT.ts  Marketplace.ts
contracts/abis/: GameNFT.ts  GameToken.ts
ios/RustBindings/: GameEngine.swift
pages/: _app.tsx  index.tsx
patches/patches/: @react-native-community+clipboard+1.5.1.patch
reducers/: game-reducer.ts
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: game.rs  lib.rs  web3.rs
rust/src/bindings/: android.rs  ios.rs  mod.rs
src/bridges/: GameEngine.tsx
src/components/: GameBoard.tsx  Tile.tsx  Web3wallet.tsx
src/screens/: GameScreen.tsx  TestScreen.tsx  index.tsx
src/types/: index.tsx
src/utils/: index.tsx
styles/: board.module.css  index.module.css  marketplace-card.module.css  marketplace.module.css  mint-modal.module.css  modal.module.css  nft-card.module.css  profile.module.css  sidebar.module.css  splash.module.css
utils/: ethers.ts
