[package]
name = "game2048_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "game2048_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# 序列化相关
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI 相关 - 修改为可选依赖
jni = { version = "0.21.1", optional = true }
rand = "0.8.5"

# Web3 相关 - 移除 TLS 功能
web3 = { version = "0.19", default-features = false, features = ["http"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

[features]
default = []
android = ["jni", "ndk-context"]
ios = []

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = { version = "0.1", optional = true }